2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* browser-plugin/totemComplexPlayer.cpp:
	* browser-plugin/totemComplexPlayer.h:
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemComplexPlugin.h:
	* browser-plugin/totemNPObject.h:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPluginGlue.cpp:
	Make the Complex plugin compile again... (Closes: #535820)

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/TODO: Remove already done TODO items
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle): Even when giosrc is
	available, use the local filename if it's available, works around
	early giosrc bugs

2008-06-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-subtitle-encoding.c (subtitle_encoding_init),
	(subtitle_encoding_get_charset), (subtitle_encoding_create_store):
	Don't remove encodings that can't pass through ASCII, as UTF-16 and
	UTF-32 certainly won't pass through, spotted by Christian Persch
	<chpe@gnome.org> (Closes: #535823)

2008-05-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_update_title), (totem_pl_item_free),
	(totem_embedded_clear_playlist),
	(totem_embedded_open_playlist_item),
	(totem_embedded_get_nice_name_for_stream), (on_got_metadata),
	(totem_embedded_construct), (entry_parsed):
	Listen to got-metadata signal, and set the fullscreen title using
	either the playlist data, or the metadata from the playlist itself

2008-05-31  Christian Persch <chpe@gnome.org>

	* src/totem-preferences.c: (totem_setup_preferences): Use the right
	handler for the delete-event signal. Bug #535952.

2008-05-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNPObject.cpp:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	Fix a warning, and a build failure with debugging disabled

2008-05-30  Christian Persch <chpe@gnome.org>

	* configure.in:
	* Makefile.am: