@@ -1,5 +1,10 @@
 2008-06-09  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totemPlugin.cpp: Hide the controls by
+	default in the VLC plugin (Closes: #526738)
+
+2008-06-09  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/Makefile.am:
 	* browser-plugin/totemComplexPlayer.cpp:
 	* browser-plugin/totemComplexPlayer.h:
